NM Portfolio - Fixing Broken TABLET designs Began work on in-between resolutions. Fixed about me appearing too large and worked on soft skills list. Will resume work on the "interests" section for next session.

--- a/nm_styles.css
+++ b/nm_styles.css
@@ -1750,15 +1750,14 @@ sub {
     font-size: 10pt;
     background-color: #2C4A9A;
     list-style: none;
-    align-self: center;
+    /* align-self: center; */
     flex-grow: 1;
-    justify-content: center;
-    justify-self: center;
+    /* justify-content: center;
+    justify-self: center; */
     text-align: center;
     max-width: 220px;
     /* Below optional??? */
-    max-height: min-content;
-    flex-grow: 1;
+    /* max-height: min-content; */
 }
 #interests {
     background-color: #2C4A9A;
@@ -2278,6 +2277,27 @@ footer {
         font-size: 10pt;
         line-height: 2;
     }
+    .ss_bg {
+        padding-right: 20px;
+        flex-direction: column;
+    }
+    #soft_skills {
+        width: calc(80vw - 60px);
+        max-width: calc(80vw - 60px);
+        margin: 50px 0;
+        padding: 50px 30px;
+    }
+    #soft_skills li {
+        padding: 8px;
+        margin: 4px;
+        line-height: 1.7;
+    }
+}
+@media only screen and (min-width:771px) and (max-width:1200px) {
+    .largest {
+        font-size: 8.7vw;
+    }
+    
 }
 /* Below keeps design flow for "in-between" resolutions */
 @media only screen and (min-width:520px) and (max-width:770px) {
